--- a/app/src/main/res/layout/fragment_choose.xml
+++ b/app/src/main/res/layout/fragment_choose.xml
@@ -11,20 +11,21 @@
 
         <Button
             android:id="@+id/button_back"
-            android:layout_width="76dp"
+            android:layout_width="70dp"
             android:layout_height="48dp"
             android:text="@string/back"
+            android:textSize="18sp"
+            android:textColor="@color/black"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:layout_marginStart="10dp"
-            android:textColor="@color/black"
-            android:textSize="20sp" />
+            android:layout_marginStart="10dp" />
         <TextView
             android:id="@+id/text_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="24sp"
             android:layout_centerInParent="true"
+            android:layout_centerVertical="true"
             android:textColor="@color/white"/>
     </RelativeLayout>
     <ListView
