--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -6,9 +6,10 @@
     android:background="@color/design_default_color_primary">
     <Button
         android:id="@+id/btn_menu"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:background="@drawable/ic_baseline_apps_24"
+        android:layout_width="60dp"
+        android:layout_height="46dp"
+        android:text="菜单"
+        android:textSize="16sp"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         android:layout_marginStart="10dp"/>
