--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-   >
+    android:orientation="vertical">
 
-     <androidx.fragment.app.FragmentContainerView
-         android:id="@+id/choose"
-         android:name="com.example.coolweather.ChooseFragment"
-         android:layout_width="match_parent"
-         android:layout_height="0dp"
-         android:layout_weight="1"
-         tools:layout="@layout/fragment_choose" />
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/choose"
+        android:name="com.example.coolweather.ChooseFragment"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        tools:layout="@layout/fragment_choose" />
 
 </LinearLayout>
